--- a/index.html
+++ b/index.html
@@ -12,189 +12,176 @@
     <header class="header">
         <img alt="logo" class="logo logo_place_header" src="images/logo_place_header.png">
         <h1 class="header__title">Aprendendo a Aprender</h1>
-        <h2 class="header__subtitle">As técnicas de aprendizado mais eficazes que você pode aplicar no seu cotidiano.</h2>
-        <a class="header__link" href="#">Saiba mais →</a>
+        <p class="header__subtitle">As técnicas de aprendizado mais eficazes que você pode aplicar no seu cotidiano. <br> <a class="header__link" href="#">Saiba mais →</a></p>
         <img alt="Garithos não fez nada de errado" class="header__main-ilustration" src="images/header-image.png">
         <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
-          <div class="two-columns__brief">
-            <h2 class="two-columns__brief__title brief__title">O maior problema da educação</h2>
-          </div>
+        <article class="two-columns">
+            <h2 class="two-columns__brief">O maior problema da educação</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__text">Seja na escola ou na universidade, o assunto que ninguém vai te ensinar é como se tornar
+            <p class="two-columns__paragraph">Seja na escola ou na universidade, o assunto que ninguém vai te ensinar é como se tornar
               autodidata. Nós repetimos exercícios específicos e memorizamos informações sem pensar e
               quando chega a hora do exame, o objetivo é apenas passar. Mas depois que o exame acaba,
               essa informação não tem mais utilidade, e não há garantia que ela será retida. No fim, nós só
               estamos aprendendo mesmo a passar nas nossas provas.</p>
-            <p class="two-columns__text"><span class="two-columns__text__span-accent">Aqui vai a pergunta de fato: </span>será que essa abordagem de repetição e memorização nos ajuda
+            <p class="two-columns__paragraph"><span class="two-columns__text__span-accent">Aqui vai a pergunta de fato: </span>será que essa abordagem de repetição e memorização nos ajuda
               realmente a entender o assunto? O consenso na academia atualmente é de que não ajuda.
               Aliás, mais importante do que um tópico individual é saber como estudar, mas por algum
               motivo esta questão é sempre deixada de lado. Então, o que podemos fazer para remediar
               isso?</p>
-            <p class="two-columns__text">Bem, há várias técnicas e exercícios que podem ser aplicados ao processo educacional para
+            <p class="two-columns__paragraph">Bem, há várias técnicas e exercícios que podem ser aplicados ao processo educacional para
               ajudar a torná-lo mais eficiente e cativante. Continue lendo para descobrir alguns dos
               segredos do aprendizado eficaz.</p>
           </div>
-        </div>
+        </article>
       </section>
-
       <section class="digits">
-        <h2 class="digits__title">Fatos e números</h2>
-        <h3 class="digits__subtitle">Sobre o célebro e o aprendizado</h3>
-        <div class="digits__table">
+        <h2 class="section__title">Fatos e números</h2>
+        <h3 class="section__subtitle">Sobre o célebro e o aprendizado</h3>
 
-          <div class="digits__table__container">
-            <h4 class="digits__table-title">86 bilhões</h4>
-            <p class="digits__table-text">O número de neurônios no
+        <ul class="table">
+          <li class="table__cell">
+            <h4 class="table__heading">86 bilhões</h4>
+            <p class="table__text">O número de neurônios no
               cérebro humano</p>
-          </div>
-
-          <div class="digits__table__container">
-            <h4 class="digits__table-title">73%</h4>
-            <p class="digits__table-text">A porcentagem de adultos nos
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">73%</h4>
+            <p class="table__text">A porcentagem de adultos nos
               EUA que se consideram
               aprendizes para a vida toda -
             </p>
-            <span class="digits__table__span">Centro de Pesquisas Pew</span>
-          </div>
-
-          <div class="digits__table__container">
-            <h4 class="digits__table-title">1000 terabytes</h4>
-            <p class="digits__table-text">1000 terabytes</p>
-          </div>
-
-          <div class="digits__table__container">
-            <h4 class="digits__table-title">500 trilhões</h4>
-            <p class="digits__table-text">O número de sinapses
+            <span class="table__text">Centro de Pesquisas Pew</span>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1000 terabytes</h4>
+            <p class="table__text">1000 terabytes</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">500 trilhões</h4>
+            <p class="table__text">O número de sinapses
               nervosas responsáveis pelo
               aprendizado em um adulto
               humano médio</p>
-          </div>
-
-          <div class="digits__table__container">
-            <h4 class="digits__table-title">420 trilhões</h4>
-            <p class="digits__table-text">O número de adultos abaixo
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">420 trilhões</h4>
+            <p class="table__text">O número de adultos abaixo
               de 25 anos sem educação
               suficiente para encontrar
               empregos -
               Banco Mundial, 2017</p>
-          </div>
-
-          <div class="digits__table__container">
-            <h4 class="digits__table-title">26 anos de idade</h4>
-            <p class="digits__table-text">A idade com que Albert
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">26 anos de idade</h4>
+            <p class="table__text">A idade com que Albert
               Einstein publicou o seu artigo
               inovador sobre a relatividade
               especial</p>
-          </div>
-
-          <div class="digits__table__container">
-            <h4 class="digits__table-title">1885</h4>
-            <p class="digits__table-text">Desenvolvimento da curva de
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1885</h4>
+            <p class="table__text">Desenvolvimento da curva de
               esquecimento</p>
-          </div>
-
-          <div class="digits__table__container">
-            <h4 class="digits__table-title">1897</h4>
-            <p class="digits__table-text">Publicação da pesquisa de
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1897</h4>
+            <p class="table__text">Publicação da pesquisa de
               Ivan Pavlov sobre
               condicionamento clássico</p>
-          </div>
-
-        </div>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
         <h2 class="feynman__title">A Técnica de Feynman</h2>
-        <h3 class="feynman__text">Aprender sem esquecer</h3>
+        <h3 class="feynman__subtitle">Aprender sem esquecer</h3>
         <a class="feynman__link" href="#">Mais →</a>
       </section>
 
       <section class="kaufman">
-        <h2 class="kaufman__title">Dez príncipios para adquirir habilidades de forma rápida </h2>
-        <h3 class="kaufman__subtitle">por Josh Kaufman</h3>
-        <div class="kaufman__table">
-          <div class="kaufman__table__container">
-            <h4 class="kaufman__table__title">1</h4>
-            <p class="kaufman__table__text">Escolha um projeto que
+        <h2 class="section__title section__title_theme_dark">Dez príncipios para adquirir habilidades de forma rápida </h2>
+        <h3 class="section__subtitle section__subtitle_theme_dark">por Josh Kaufman</h3>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <p class="table__text table__text_theme_dark">Escolha um projeto que
               te traga interesse</p>
-          </div>
-          <div class="kaufman__table__container">
-            <h4 class="kaufman__table__title">2</h4>
-            <p class="kaufman__table__text">Foque a sua energia em
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <p class="table__text table__text_theme_dark">Foque a sua energia em
               uma habilidade por vez </p>
-          </div>
-          <div class="kaufman__table__container">
-            <h4 class="kaufman__table__title">3</h4>
-            <p class="kaufman__table__text">Defina o seu nível alvo
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <p class="table__text table__text_theme_dark">Defina o seu nível alvo
               de performance</p>
-          </div>
-          <div class="kaufman__table__container">
-            <h4 class="kaufman__table__title">4</h4>
-            <p class="kaufman__table__text">Desconstrua a
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <p class="table__text table__text_theme_dark">Desconstrua a
               habilidade em sub-habilidades</p>
-          </div>
-          <div class="kaufman__table__container">
-            <h4 class="kaufman__table__title">5</h4>
-            <p class="kaufman__table__text">Obtenha ferramentas
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <p class="table__text table__text_theme_dark">Obtenha ferramentas
               críticas</p>
-          </div>
-          <div class="kaufman__table__container">
-            <h4 class="kaufman__table__title">6</h4>
-            <p class="kaufman__table__text">Elimite as barreiras para
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <p class="table__text table__text_theme_dark">Elimite as barreiras para
               praticar</p>
-          </div>
-          <div class="kaufman__table__container">
-            <h4 class="kaufman__table__title">7</h4>
-            <p class="kaufman__table__text">Dedique tempo para a
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <p class="table__text table__text_theme_dark">Dedique tempo para a
               prática</p>
-          </div>
-          <div class="kaufman__table__container">
-            <h4 class="kaufman__table__title">8</h4>
-            <p class="kaufman__table__text">Crie ciclos de feedback
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <p class="table__text table__text_theme_dark">Crie ciclos de feedback
               rápidos</p>
-          </div>
-          <div class="kaufman__table__container">
-            <h4 class="kaufman__table__title">9</h4>
-            <p class="kaufman__table__text">Pratique usando o
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <p class="table__text table__text_theme_dark">Pratique usando o
               relógio, em intervalos
               curtos de tempo</p>
-          </div>
-          <div class="kaufman__table__container">
-            <h4 class="kaufman__table__title">10</h4>
-            <p class="kaufman__table__text">Dê ênfase a quantidade
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <p class="table__text table__text_theme_dark">Dê ênfase a quantidade
               e velocidade</p>
-          </div>
-        </div>
-        <img class="kaufman__pic" alt="triangulo" src="images/kaufman-triangle.svg">
+          </li>
+        </ul>
+        <img class="kaufman__triangle" alt="triangulo" src="images/kaufman-triangle.svg">
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__block">
-        <div>
-          <img alt="logo footer__logo" src="images/logo_place_footer.png">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <img class="footer__logo" alt="logo" src="images/logo_place_footer.png">          
+          <p class="footer__author">© 2021 Izaque Israel</p>
         </div>
-        <p class="copyright">© 2021 Seu nome</p>
+      <!--links-->
+      <div class="footer__column footer__column_content_info">
+        <h3 class="footer__column-heading">Sobre o Practicum da Yandex</h3>
+        <ul class="footer__column-links">
+          <li class="footer__column-links"><a class="footer__column-links" href="#">Página inicial</a></li>
+          <li class="footer__column-links"><a class="footer__column-links" href="#">Missão</a></li>
+          <li class="footer__column-links"><a class="footer__column-links" href="#">Profissões</a></li>
+        </ul>
       </div>
-      <div class="footer__about">
-        <h2 class="footer__about__title">Sobre o Practicum da Yandex</h2>
-        <p class="footer__about__text">Página inicial</p>
-        <p class="footer__about__text">Missão</p>
-        <p class="footer__about__text">Profissões</p>
+      <div clas="footer__column footer__column_content_social">
+        <h3 clas="footer__column-heading">Mídia Social</h3>
+        <ul class="footer__cokumn-links">
+          <li class="footer__column-links"><img class="footer__social-icon" alt="facebook" src="images/facebook_white.svg"><a href="#" class="footer__column-links">Facebook</a></li>  
+          <li class="footer__column-links"><img class="footer__social-icon" alt="instagram" src="images/instagram_white.svg"><a href="#" class="footer__column-links">Instagram</a></li>
+        </ul>
       </div>
-      <div clas="fotter__media">
-        <h3 clas="footer__media__title">Mídia Social</h3>
-        <div class="fotter__media__block">
-          <img alt="facebook" src="images/facebook_white.svg">
-          <p>Facebook</p>
-        </div>
-        <div class="fotter__media__block">
-          <img class="footer__media__icon" alt="twitter" src="images/instagram_white.svg">
-          <p>Instagram</p>
-        </div>
       </div>
     </footer>
   </div>
