--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <img alt="logo" class="logo logo_place_header" src="images/logo_place_header.png">
         <h1 class="header__title">Aprendendo a Aprender</h1>
-        <p class="header__subtitle">As técnicas de aprendizado mais eficazes que você pode aplicar no seu cotidiano. <br> <a class="header__link" href="#">Saiba mais →</a></p>
+        <p class="header__subtitle">As técnicas de aprendizado mais eficazes que você pode aplicar no seu cotidiano.<a class="header__link" href="#">Saiba mais →</a></p>
         <img alt="Garithos não fez nada de errado" class="header__main-ilustration" src="images/header-image.png">
         <div class="header__square-pic"></div>
     </header>
