--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header class="header">
         <img alt="logo" class="logo logo_place_header" src="images/logo_place_header.png">
         <h1 class="header__title">Aprendendo a Aprender</h1>
-        <p class="header__subtitle">As técnicas de aprendizado mais eficazes que você pode aplicar no seu cotidiano.<a class="header__link" href="#">Saiba mais →</a></p>
+        <p class="header__subtitle">As técnicas de aprendizado mais eficazes que você pode aplicar no seu cotidiano.      
+        <a class="header__link" href="#">Saiba mais →</a></p>
         <img alt="Garithos não fez nada de errado" class="header__main-ilustration" src="images/header-image.png">
         <div class="header__square-pic"></div>
     </header>
@@ -53,26 +54,23 @@
               EUA que se consideram
               aprendizes para a vida toda -
             </p>
-            <span class="table__text">Centro de Pesquisas Pew</span>
+            <p class="table__text">Centro de Pesquisas Pew</p>
           </li>
           <li class="table__cell">
             <h4 class="table__heading">1000 terabytes</h4>
             <p class="table__text">1000 terabytes</p>
           </li>
-          <li class="table__cell">
+           <li class="table__cell"> <!--É para transformar o h4 daqui em <p>? Não entendi o q quis dizer com 2p -->
             <h4 class="table__heading">500 trilhões</h4>
             <p class="table__text">O número de sinapses
               nervosas responsáveis pelo
               aprendizado em um adulto
-              humano médio</p>
+              humano médio</p>   
           </li>
           <li class="table__cell">
             <h4 class="table__heading">420 trilhões</h4>
-            <p class="table__text">O número de adultos abaixo
-              de 25 anos sem educação
-              suficiente para encontrar
-              empregos -
-              Banco Mundial, 2017</p>
+            <p class="table__text">O número de adultos abaixo de 25 anos sem educação suficiente para encontrar empregos -</p>
+            <p class="table__text">Banco Mundial, 2017</p>
           </li>
           <li class="table__cell">
             <h4 class="table__heading">26 anos de idade</h4>
@@ -162,28 +160,30 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
+        <!-- logo e author-->
         <div class="footer__column footer__column_content_copyright">
           <img class="footer__logo" alt="logo" src="images/logo_place_footer.png">          
           <p class="footer__author">© 2021 Izaque Israel</p>
         </div>
-      <!--links-->
-      <div class="footer__column footer__column_content_info">
+              <!--Column e links-->
+      <div class="footer__column footer__column_content_about">
         <h3 class="footer__column-heading">Sobre o Practicum da Yandex</h3>
-        <ul class="footer__column-links">
-          <li class="footer__column-links"><a class="footer__column-links" href="#">Página inicial</a></li>
-          <li class="footer__column-links"><a class="footer__column-links" href="#">Missão</a></li>
-          <li class="footer__column-links"><a class="footer__column-links" href="#">Profissões</a></li>
+        <ul class="footer__list">
+          <li><a class="footer__column-links" href="#">Página inicial</a></li>
+          <li><a class="footer__column-links" href="#">Missão</a></li>
+          <li><a class="footer__column-links" href="#">Profissões</a></li>
         </ul>
       </div>
+              <!--Column e links-->
       <div clas="footer__column footer__column_content_social">
-        <h3 clas="footer__column-heading">Mídia Social</h3>
-        <ul class="footer__cokumn-links">
-          <li class="footer__column-links"><img class="footer__social-icon" alt="facebook" src="images/facebook_white.svg"><a href="#" class="footer__column-links">Facebook</a></li>  
-          <li class="footer__column-links"><img class="footer__social-icon" alt="instagram" src="images/instagram_white.svg"><a href="#" class="footer__column-links">Instagram</a></li>
+        <h3 class="footer__column-heading">Mídia Social</h3>
+        <ul class="footer__list">
+          <li><a href="#" class="footer__column-links"><img class="footer__social-icon" alt="facebook" src="images/facebook_white.svg">Facebook</a></li>  
+          <li><a href="#" class="footer__column-links"><img class="footer__social-icon" alt="instagram" src="images/instagram_white.svg">Instagram</a></li>
         </ul>
       </div>
       </div>
-    </footer>
+    </footer> 
   </div>
 </body>
 </html>
