--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </ul>
       </div>
               <!--Column e links-->
-      <div clas="footer__column footer__column_content_social">
+      <div class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Mídia Social</h3>
         <ul class="footer__list">
           <li><a href="#" class="footer__column-links"><img class="footer__social-icon" alt="facebook" src="images/facebook_white.svg">Facebook</a></li>  
