--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="header__subtitle">As técnicas de aprendizado mais eficazes que você pode aplicar no seu cotidiano.      
         <a class="header__link" href="#">Saiba mais →</a></p>
         <img alt="Garithos não fez nada de errado" class="header__main-ilustration" src="images/header-image.png">
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -38,10 +38,61 @@
           </div>
         </article>
       </section>
+      <section class="techniques">
+        <h3 class="section__title">Aprender Técnicas</h3>
+        <p class="section__subtitle">As Cinco estratégias de Barbara Oakley</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-attention.png" alt="GARITHOS DID NOTHING WRONG">
+            <h4 class="cards__title">As Duas Maneiras de Pensar</h4>
+            <p class="cards__description">Uma compreensão profunda surge da capacidade de alternar entre o pensamento difuso e o focado.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-recall.png" alt="GARITHOS DID NOTHING WRONG">
+            <h4 class="cards__title">Recordar</h4>
+            <p class="cards__description">Melhorar sua capacidade de para recordar pequenas informações importantes ajuda a conectar diferentes partes do cérebro.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-interleaving.png" alt="GARITHOS DID NOTHING WRONG">
+            <h4 class="cards__title">Intercalar </h4>
+            <p class="cards__description">Quando você aprende diferentes habilidades ao mesmo tempo, elas fortalecem umas às outras.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-question.png" alt="GARITHOS DID NOTHING WRONG">
+            <h4 class="cards__title">Questões</h4>
+            <p class="cards__description">Quando estiver escutando seu professor, pense em uma boa pergunta, algo que você realmente gostaria de saber.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-competence.png" alt="GARITHOS DID NOTHING WRONG">
+            <h4 class="cards__title">Ilusão da Competência</h4>
+            <p class="cards__description">Teste a si mesmo, anote, fale com outra pessoa e repita o processo de diferentes situações. Somente assim você vai ter certeza de que entendeu alguma coisa.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section__title">Conversas TED</h2>
+        <h3 class="section__subtitle">Para os amantes da procrastinação</h3>
+        <ul class="video__iframes">
+          <li class="video__iframe"><iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe></li>
+          <li class="video__iframe"><iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe></li>
+        </ul>
+      </section>
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">A história de Barbara Oakley.</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">A matemática não veio naturalmente para Barbara na infância. Ela se identificava mais com ciências humanas, e que não era muito brilhante nisso. Com o objetivo de se especializar em linguística, após terminar seus estudos, ela se alistou no Exército, que a enviou para aprender russo. Após vários anos de serviço, tornando-se capitã, Barbara deixou o Exército e decidiu estudar engenharia. Foi nesta época que ela desenvolveu a metodologia de aprendizagem, pois precisou reprogramar seu cérebro para um tipo diferente de aprendizagem. Quando algo não ocorre naturalmente, então é preciso trabalhar duro para obter o conhecimento que outras pessoas podem obter rapidamente, dando assim uma visão mais profunda e abrangente do assunto.</p>
+        </div>
+      </article>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">A Técnica de Feynman</h2>
+        <h3 class="feynman__subtitle">Aprender sem esquecer</h3>
+        <a class="feynman__link" href="#">Mais →</a>
+      </section>
       <section class="digits">
         <h2 class="section__title">Fatos e números</h2>
         <h3 class="section__subtitle">Sobre o célebro e o aprendizado</h3>
-
         <ul class="table">
           <li class="table__cell">
             <h4 class="table__heading">86 bilhões</h4>
@@ -60,7 +111,7 @@
             <h4 class="table__heading">1000 terabytes</h4>
             <p class="table__text">1000 terabytes</p>
           </li>
-           <li class="table__cell"> <!--É para transformar o h4 daqui em <p>? Não entendi o q quis dizer com 2p -->
+           <li class="table__cell"> 
             <h4 class="table__heading">500 trilhões</h4>
             <p class="table__text">O número de sinapses
               nervosas responsáveis pelo
@@ -92,13 +143,19 @@
           </li>
         </ul>
       </section>
-
-      <section class="feynman">
-        <h2 class="feynman__title">A Técnica de Feynman</h2>
-        <h3 class="feynman__subtitle">Aprender sem esquecer</h3>
-        <a class="feynman__link" href="#">Mais →</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Salman Khan</p>
+          <h2 class="khan__title">The One World Schoolhouse</h2>
+          <p class="khan__quote">A paixão e inovação de Sal Khan é transformar o aprendizado para milhões de estudantes no mundo todo. O livro The One World Schoolhouse é uma leitura obrigatória para quem quer melhorar a educação e que os estudantes habilidades e conhecimentos necessários na escola, na carreira, e na vida em geral.</p>
+          <p class="khan__quote-author">George Lucas</p>
+          <p class="khan__quote-author-subline">Diretor</p>
+        <div class="khan__book-container">
+          <div class="khan__book-pic"></div>
+          <a class="link khan__buy-link" href="#">Comprar →</a>
+        </div>
+      </div>
       </section>
-
       <section class="kaufman">
         <h2 class="section__title section__title_theme_dark">Dez príncipios para adquirir habilidades de forma rápida </h2>
         <h3 class="section__subtitle section__subtitle_theme_dark">por Josh Kaufman</h3>
@@ -155,7 +212,17 @@
               e velocidade</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" alt="triangulo" src="images/kaufman-triangle.svg">
+        <img class="kaufman__triangle rotation" alt="triangulo" src="images/kaufman-triangle.svg">
+      </section>
+      <section class="resources">
+        <h2 class="section__title">Recursos úteis</h2>
+        <h3 class="section__subtitle">Material adicional sobre técnicas e hacks de aprendizagem.</h3>
+        <ul class="resources__logo-zone">
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/resources-tedED.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/resources-Medium.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/resources-dezeen.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/resources-goodreads.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
