--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="vendor/normalize.css">
+  <link rel="stylesheet" href="pages/index.css">
   <title>Aprendendo a aprender</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-        <img alt="logo" class="logo logo_place_header" src="images/logo_place_header.png">
+        <img alt="logo" class="logo logo_place_header" src="images/logos/logo_place_header.png">
         <h1 class="header__title">Aprendendo a Aprender</h1>
         <p class="header__subtitle">As técnicas de aprendizado mais eficazes que você pode aplicar no seu cotidiano.      
         <a class="header__link" href="#">Saiba mais →</a></p>
@@ -218,10 +218,10 @@
         <h2 class="section__title">Recursos úteis</h2>
         <h3 class="section__subtitle">Material adicional sobre técnicas e hacks de aprendizagem.</h3>
         <ul class="resources__logo-zone">
-          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/resources-tedED.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
-          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/resources-Medium.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
-          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/resources-dezeen.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
-          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/resources-goodreads.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/logos/resources-tedED.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/logos/resources-Medium.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/logos/resources-dezeen.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
+          <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/logos/resources-goodreads.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
         </ul>
       </section>
     </main>
@@ -229,7 +229,7 @@
       <div class="footer__columns">
         <!-- logo e author-->
         <div class="footer__column footer__column_content_copyright">
-          <img class="footer__logo" alt="logo" src="images/logo_place_footer.png">          
+          <img class="footer__logo" alt="logo" src="images/logos/logo_place_footer.png">          
           <p class="footer__author">© 2021 Izaque Israel</p>
         </div>
               <!--Column e links-->
@@ -245,8 +245,8 @@
       <div class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Mídia Social</h3>
         <ul class="footer__list">
-          <li><a href="#" class="footer__column-links"><img class="footer__social-icon" alt="facebook" src="images/facebook_white.svg">Facebook</a></li>  
-          <li><a href="#" class="footer__column-links"><img class="footer__social-icon" alt="instagram" src="images/instagram_white.svg">Instagram</a></li>
+          <li><a href="#" class="footer__column-links"><img class="footer__social-icon" alt="facebook" src="images/icons/facebook_white.svg">Facebook</a></li>  
+          <li><a href="#" class="footer__column-links"><img class="footer__social-icon" alt="instagram" src="images/icons/instagram_white.svg">Instagram</a></li>
         </ul>
       </div>
       </div>
