mudança de nome de classe section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </article>
       </section>
       <section class="techniques">
-        <h3 class="section__title">Aprender Técnicas</h3>
-        <p class="section__subtitle">As Cinco estratégias de Barbara Oakley</p>
+        <h3 class="section-title">Aprender Técnicas</h3>
+        <p class="section-subtitle">As Cinco estratégias de Barbara Oakley</p>
         <ul class="cards">
           <li class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="GARITHOS DID NOTHING WRONG">
@@ -69,8 +69,8 @@
         </ul>
       </section>
       <section class="video">
-        <h2 class="section__title">Conversas TED</h2>
-        <h3 class="section__subtitle">Para os amantes da procrastinação</h3>
+        <h2 class="section-title">Conversas TED</h2>
+        <h3 class="section-subtitle">Para os amantes da procrastinação</h3>
         <ul class="video__iframes">
           <li class="video__iframe"><iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe></li>
           <li class="video__iframe"><iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe></li>
@@ -90,8 +90,8 @@
         <a class="feynman__link" href="#">Mais →</a>
       </section>
       <section class="digits">
-        <h2 class="section__title">Fatos e números</h2>
-        <h3 class="section__subtitle">Sobre o célebro e o aprendizado</h3>
+        <h2 class="section-title">Fatos e números</h2>
+        <h3 class="section-subtitle">Sobre o célebro e o aprendizado</h3>
         <ul class="table">
           <li class="table__cell">
             <h4 class="table__heading">86 bilhões</h4>
@@ -156,8 +156,8 @@
       </div>
       </section>
       <section class="kaufman">
-        <h2 class="section__title section__title_theme_dark">Dez príncipios para adquirir habilidades de forma rápida </h2>
-        <h3 class="section__subtitle section__subtitle_theme_dark">por Josh Kaufman</h3>
+        <h2 class="section-title section-title_theme_dark">Dez príncipios para adquirir habilidades de forma rápida </h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">por Josh Kaufman</h3>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
@@ -214,8 +214,8 @@
         <img class="kaufman__triangle rotation" alt="triangulo" src="images/kaufman-triangle.svg">
       </section>
       <section class="resources">
-        <h2 class="section__title">Recursos úteis</h2>
-        <h3 class="section__subtitle">Material adicional sobre técnicas e hacks de aprendizagem.</h3>
+        <h2 class="section-title">Recursos úteis</h2>
+        <h3 class="section-subtitle">Material adicional sobre técnicas e hacks de aprendizagem.</h3>
         <ul class="resources__logo-zone">
           <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/logos/resources-tedED.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
           <li class="resources__logo"><a href="#"><img class="resources__logo" src="/images/logos/resources-Medium.png" alt="GARITHOS DID NOTHING WRONG"></a></li>
